[feat] fix font size on mobile

--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -136,3 +136,7 @@ p {
   font-size: 16px;
   font-weight: 400;
 }
+
+.content-text {
+  text-align: justify;
+}
